# coding-quality-loop

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SKILL.md  action.yml  agent-record.json  quality-loop.config.json
.claude/: settings.json
.github/: FUNDING.yml
.quality-loop/: agent-record.json  allowed-commands  delegations.jsonl  last-verified.json  outcomes.jsonl  progress.md
archive/: v240-validation-contract.md
archive/eval-runs/rust-procmon-eval-2026-07-03/variants/claude-baseline/: Cargo.toml
archive/eval-runs/rust-procmon-eval-2026-07-03/variants/claude-baseline/src/: format.rs
archive/eval-runs/rust-procmon-eval-2026-07-03/variants/claude-cql/: Cargo.toml  README.md
archive/eval-runs/rust-procmon-eval-2026-07-03/variants/claude-cql/.quality-loop/: context-map.md  execution-log.md  plan.md  task-contract.md
archive/eval-runs/rust-procmon-eval-2026-07-03/variants/claude-cql/src/: output.rs  table.rs  tree.rs  watch.rs
archive/eval-runs/rust-procmon-eval-2026-07-03/variants/claude-cql/tests/: integration.rs
assets/: AGENTS.template.md  agent-record.schema.json  completion-record.md  context-budget.md  contract.md  decision-log.md  execution-log.md  lesson.schema.json  plan.md  progress.md  quality-loop.config.example.json  quality-loop.config.schema.json  task-contract-template.md  validation-contract.md
bench/: PROTOCOL.md  ablation-protocol.md  judge-protocol.md  live-run-recipe.md  metrics.py  runner.py
docs/: README.md  architecture.md  comparison.md  control-plane.md  cross-cli-recipe.md  (+9 more)
(+394 files in other folders)
