[package]
name = "procmon"
version = "0.1.0"
edition = "2021"
description = "Linux process monitor CLI"
authors = ["procmon"]

[[bin]]
name = "procmon"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"

[profile.release]
opt-level = 3
